feat: add donate page

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -5,13 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online zoo - list of pages</title>
-    <meta http-equiv="refresh" content="0; url='https://rolling-scopes-school.github.io/zhannach-JSFE2022Q3/online-zoo/pages/main/petstory.html'" />
+    <meta
+      http-equiv="refresh"
+      content="0; url='https://rolling-scopes-school.github.io/zhannach-JSFE2022Q3/online-zoo/pages/main/petstory.html'"
+    />
   </head>
   <body>
     <p>
-      <a href="https://rolling-scopes-school.github.io/zhannach-JSFE2022Q3/online-zoo/pages/main/petstory.html">
-          Online Zoo Homepage
+      <a
+        href="https://rolling-scopes-school.github.io/zhannach-JSFE2022Q3/online-zoo/pages/main/petstory.html"
+      >
+        Online Zoo Homepage
       </a>
     </p>
-    </body>
-    </html>
+    
+    <p>
+      <a
+        href="https://rolling-scopes-school.github.io/zhannach-JSFE2022Q3/online-zoo/pages/donate/donate.html"
+      >
+        Donate
+      </a>
+    </p>
+  </body>
+</html>
