--- a/online-zoo/pages/main/petstory.html
+++ b/online-zoo/pages/main/petstory.html
@@ -24,7 +24,7 @@
             <span class="nav__link nav__link-current">About</span>
             <a href="#" class="nav__link">Map</a>
             <a href="#" class="nav__link">Zoos</a>
-            <a href="#" class="nav__link">Donate</a>
+            <a href="../donate/donate.html" class="nav__link">Donate</a>
             <a href="#" class="nav__link">Contact us</a>
             <a
               href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online"
@@ -453,8 +453,8 @@
               </form>
             </div>
           </div>
-          <form action="#">
-            <button class="btn footer__btn">donate for volunteers</button>
+          <form method="GET" action="../donate/donate.html">
+            <button class="btn footer__btn">Donate for volunteers</button>
           </form>
           <div class="footer__bottom">
             <div class="footer__soc">
