feat: add implement donate input and radiobox

--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -17,7 +17,7 @@
         <div class="header__content">
           <div class="logo header__logo">
             <h1 class="logo__text">
-              <a href="petstory.html" class="logo__link">PetStory online</a>
+              <a href="../main/petstory.html" class="logo__link">PetStory online</a>
             </h1>
           </div>
           <div class="nav header__nav">
@@ -114,6 +114,7 @@
                     id="1000"
                     class="linear__input"
                     name="sum"
+                    checked
                   />
                   <label for="1000" class="linear__label">
                     <span class="linear-sign">$</span>
@@ -179,6 +180,7 @@
                     id="25"
                     class="linear__input"
                     name="sum"
+                    
                   />
                   <label for="25" class="linear__label">
                     <span class="linear-sign">$</span>
@@ -189,7 +191,7 @@
               </div>
               <form action="#" class="interactive__form">
                 <input
-                  type="text"
+                  type="number"
                   class="interactive__amount"
                   min="1"
                   max="9999"
@@ -233,7 +235,7 @@
           <div class="footer__top">
             <div class="logo footer__logo">
               <h2 class="logo__text">
-                <a href="index.html" class="logo__link">PetStory online</a>
+                <a href="../main/petstory.html" class="logo__link">PetStory online</a>
               </h2>
             </div>
             <div class="footer__email">
@@ -292,7 +294,7 @@
               </div>
             </div>
             <nav class="nav footer__nav">
-              <a href="petstory.html" class="nav__link nav__link-current"
+              <a href="../main/petstory.html" class="nav__link nav__link-current"
                 >About</a
               >
               <a href="#" class="nav__link">Map</a>
