feat: fix petstory and donate layout

--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -297,7 +297,7 @@
               </div>
             </div>
             <nav class="nav footer__nav">
-              <a href="../main/petstory.html" class="nav__link nav__link-current"
+              <a href="../main/petstory.html" class="nav__link"
                 >About</a
               >
               <a href="#" class="nav__link">Map</a>
