--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -9,9 +9,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,regular"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="donate.css" />
-    <script src="../donate/donate.js" defer></script>
-    <script src="../../assets/scripts/global.js" defer></script>
+    <link rel="stylesheet" href="donate.css?w3" />
+    <script src="../donate/donate.js?w3" defer></script>
+    <script src="../../assets/scripts/global.js?w3" defer></script>
   </head>
   <body>
     <header class="header">
