--- a/online-zoo/pages/main/petstory.html
+++ b/online-zoo/pages/main/petstory.html
@@ -13,9 +13,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="petstory.css" />
-    <script src="../main/petstory.js" defer></script>
-    <script src="../../assets/scripts/global.js" defer></script>
+    <link rel="stylesheet" href="petstory.css?w3" />
+    <script src="../main/petstory.js?w3" defer></script>
+    <script src="../../assets/scripts/global.js?w3" defer></script>
   </head>
   <body>
     <header class="header">
