fix: fix input value

--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -217,8 +217,9 @@
                 <input
                   type="number"
                   class="interactive__amount"
-                  min="1"
+                  min="0"
                   max="9999"
+                  maxlength="4"
                   placeholder="Another amount"
                   value="100"
                 />
@@ -335,6 +336,7 @@
               >
               <a href="https://rs.school/" class="footer__link" target="_blank"
                 >©RSSchool & ©Yem Digital 2021</a
+
               >
             </div>
           </div>
@@ -343,4 +345,5 @@
     </footer>
   </body>
   <div class="overlay"></div>
+
 </html>
