--- a/gem-puzzle/index.html
+++ b/gem-puzzle/index.html
@@ -8,8 +8,7 @@
     <link href="styles.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,regular"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <script src="./script.js" defer></script>
   </head>
   <body></body>
